--- a/hm.tex
+++ b/hm.tex
@@ -7,6 +7,14 @@
   \usepackage[utf8]{inputenc}
 \else
   \usepackage{fontspec} % XeLaTeX or LuaLaTeX
+  \setmainfont{OpenDyslexic}
+  \setsansfont{OpenDyslexic}
+  \setmonofont{OpenDyslexicMono}
+
+  \setmainfont[Renderer=Basic, Numbers=OldStyle, Scale = 1.0]{TeX Gyre Pagella}
+  \setsansfont[Renderer=Basic, Scale=0.90]{TeX Gyre Heros}
+  \setmonofont[Renderer=Basic]{TeX Gyre Cursor}
+
 \fi
 
 \usepackage[
